Corrupted nodegroups crash blender when copy pasting or appending them #74546

Closed
opened 2020-03-08 18:31:10 +01:00 by dev369 · 8 comments

System Information
Operating system: windos 10
Graphics card: 1070

Blender Version
Broken: 2.83
Worked: 2.82

After duplicating these nodegroups they somehow got corrupted and started crashing blender. They were much more complex groups when I duplicated them, I simplified them as much as possible but the effect is still the same. I do not know how to replicate the corruption itself with simpler groups.

Try copy pasting the object in this file or materials or appending them it will crah Blender

sss.blend

**System Information** Operating system: windos 10 Graphics card: 1070 **Blender Version** Broken: 2.83 Worked: 2.82 After duplicating these nodegroups they somehow got corrupted and started crashing blender. They were much more complex groups when I duplicated them, I simplified them as much as possible but the effect is still the same. I do not know how to replicate the corruption itself with simpler groups. Try copy pasting the object in this file or materials or appending them it will crah Blender [sss.blend](https://archive.blender.org/developer/F8395424/sss.blend)
Author

Added subscriber: @dev369

Added subscriber: @dev369

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Can confirm crash, missing links in ListBase.

>	blender.exe!BLI_remlink(ListBase * listbase, void * vlink) Řádek 145	C

 	blender.exe!id_sort_by_name(ListBase * lb, ID * id, ID * id_sorting_hint) Řádek 1622	C
 	blender.exe!BKE_id_new_name_validate(ListBase * lb, ID * id, const unsigned char * tname) Řádek 1992	C
 	blender.exe!lib_id_clear_library_data_ex(Main * bmain, ID * id) Řádek 175	C
 	blender.exe!lib_id_clear_library_data_ex(Main * bmain, ID * id) Řádek 187	C
 	blender.exe!BKE_library_make_local(Main * bmain, const Library * lib, GHash * old_to_new_ids, const bool untagged_only, const bool set_fake) Řádek 2257	C
 	blender.exe!BKE_copybuffer_paste(bContext * C, const unsigned char * libname, const short flag, ReportList * reports, const unsigned __int64 id_types_mask) Řádek 162	C
 	blender.exe!view3d_pastebuffer_exec(bContext * C, wmOperator * op) Řádek 113	C
 	blender.exe!wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const bool poll_only, bool use_last_properties) Řádek 1279	C
 	blender.exe!wm_handler_operator_call(bContext * C, ListBase * handlers, wmEventHandler * handler_base, wmEvent * event, PointerRNA * properties, const unsigned char * kmi_idname) Řádek 2098	C
 	blender.exe!wm_handlers_do_keymap_with_keymap_handler(bContext * C, wmEvent * event, ListBase * handlers, wmEventHandler_Keymap * handler, wmKeyMap * keymap, const bool do_debug_handler) Řádek 2408	C
 	blender.exe!wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Řádek 2544	C
 	blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Řádek 2809	C
 	blender.exe!wm_event_do_handlers(bContext * C) Řádek 3263	C
 	blender.exe!WM_main(bContext * C) Řádek 421	C
 	blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Řádek 524	C
Can confirm crash, missing links in ListBase. ``` > blender.exe!BLI_remlink(ListBase * listbase, void * vlink) Řádek 145 C blender.exe!id_sort_by_name(ListBase * lb, ID * id, ID * id_sorting_hint) Řádek 1622 C blender.exe!BKE_id_new_name_validate(ListBase * lb, ID * id, const unsigned char * tname) Řádek 1992 C blender.exe!lib_id_clear_library_data_ex(Main * bmain, ID * id) Řádek 175 C blender.exe!lib_id_clear_library_data_ex(Main * bmain, ID * id) Řádek 187 C blender.exe!BKE_library_make_local(Main * bmain, const Library * lib, GHash * old_to_new_ids, const bool untagged_only, const bool set_fake) Řádek 2257 C blender.exe!BKE_copybuffer_paste(bContext * C, const unsigned char * libname, const short flag, ReportList * reports, const unsigned __int64 id_types_mask) Řádek 162 C blender.exe!view3d_pastebuffer_exec(bContext * C, wmOperator * op) Řádek 113 C blender.exe!wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const bool poll_only, bool use_last_properties) Řádek 1279 C blender.exe!wm_handler_operator_call(bContext * C, ListBase * handlers, wmEventHandler * handler_base, wmEvent * event, PointerRNA * properties, const unsigned char * kmi_idname) Řádek 2098 C blender.exe!wm_handlers_do_keymap_with_keymap_handler(bContext * C, wmEvent * event, ListBase * handlers, wmEventHandler_Keymap * handler, wmKeyMap * keymap, const bool do_debug_handler) Řádek 2408 C blender.exe!wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Řádek 2544 C blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Řádek 2809 C blender.exe!wm_event_do_handlers(bContext * C) Řádek 3263 C blender.exe!WM_main(bContext * C) Řádek 421 C blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Řádek 524 C ```
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

ASAN outputs this when I paste the object into another Blender instance: /home/jacques/blender-git/blender/source/blender/blenkernel/intern/lib_id.c:148:69: runtime error: member access within null pointer of type 'struct Library'

lib_id_library_local_paths(Main * bmain, Library * lib, ID * id) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/lib_id.c:150)
lib_id_clear_library_data_ex(Main * bmain, ID * id) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/lib_id.c:168)
lib_id_clear_library_data_ex(Main * bmain, ID * id) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/lib_id.c:184)
BKE_library_make_local(Main * bmain, const Library * lib, GHash * old_to_new_ids, const _Bool untagged_only, const _Bool set_fake) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/lib_id.c:1947)
BKE_copybuffer_paste(bContext * C, const char * libname, const short flag, ReportList * reports, const uint64_t id_types_mask) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/blender_copybuffer.c:158)
view3d_pastebuffer_exec(bContext * C, wmOperator * op) (/home/jacques/blender-git/blender/source/blender/editors/space_view3d/view3d_ops.c:113)
wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const _Bool poll_only, _Bool use_last_properties) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:1279)
wm_handler_operator_call(bContext * C, ListBase * handlers, wmEventHandler * handler_base, wmEvent * event, PointerRNA * properties, const char * kmi_idname) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2098)
wm_handlers_do_keymap_with_keymap_handler(bContext * C, wmEvent * event, ListBase * handlers, wmEventHandler_Keymap * handler, wmKeyMap * keymap, const _Bool do_debug_handler) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2408)
wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2702)
wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2829)
wm_event_do_handlers(bContext * C) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:3298)
WM_main(bContext * C) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm.c:442)
main(int argc, const char ** argv) (/home/jacques/blender-git/blender/source/creator/creator.c:522)

So lib_id_library_local_paths is called with lib == NULL. Not sure if this is the root issue here.

ASAN outputs this when I paste the object into another Blender instance: `/home/jacques/blender-git/blender/source/blender/blenkernel/intern/lib_id.c:148:69: runtime error: member access within null pointer of type 'struct Library'` ``` lib_id_library_local_paths(Main * bmain, Library * lib, ID * id) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/lib_id.c:150) lib_id_clear_library_data_ex(Main * bmain, ID * id) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/lib_id.c:168) lib_id_clear_library_data_ex(Main * bmain, ID * id) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/lib_id.c:184) BKE_library_make_local(Main * bmain, const Library * lib, GHash * old_to_new_ids, const _Bool untagged_only, const _Bool set_fake) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/lib_id.c:1947) BKE_copybuffer_paste(bContext * C, const char * libname, const short flag, ReportList * reports, const uint64_t id_types_mask) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/blender_copybuffer.c:158) view3d_pastebuffer_exec(bContext * C, wmOperator * op) (/home/jacques/blender-git/blender/source/blender/editors/space_view3d/view3d_ops.c:113) wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const _Bool poll_only, _Bool use_last_properties) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:1279) wm_handler_operator_call(bContext * C, ListBase * handlers, wmEventHandler * handler_base, wmEvent * event, PointerRNA * properties, const char * kmi_idname) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2098) wm_handlers_do_keymap_with_keymap_handler(bContext * C, wmEvent * event, ListBase * handlers, wmEventHandler_Keymap * handler, wmKeyMap * keymap, const _Bool do_debug_handler) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2408) wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2702) wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2829) wm_event_do_handlers(bContext * C) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:3298) WM_main(bContext * C) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm.c:442) main(int argc, const char ** argv) (/home/jacques/blender-git/blender/source/creator/creator.c:522) ``` So `lib_id_library_local_paths` is called with `lib == NULL`. Not sure if this is the root issue here.

This issue was referenced by 9632a06201

This issue was referenced by 9632a0620135b78339b7511b173f31e70427d4eb

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2020-05-15 18:02:02 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74546
No description provided.